fix: Legal Dialog not showing.

--- a/src/views/presentation/presentation.view.scss
+++ b/src/views/presentation/presentation.view.scss
@@ -159,7 +159,7 @@
       margin-top: 48px;
       position: sticky;
       top: 0;
-      z-index: 2000;
+      z-index: 1;
     }
 
     .projects {
